--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.25"
-if_chain = "1.0.1"
-lazy_static = "1.4.0"
-phf = { version="0.9.0", features=["macros"] }
-rand = "0.8.4"
-num-bigint = "0.4"
-clap = "3.0.0-beta.2"
+thiserror = "1.0.64"
+if_chain = "1.0.2"
+lazy_static = "1.5.0"
+phf = { version="0.11.2", features=["macros"] }
+rand = "0.8.5"
+num-bigint = "0.4.6"
+clap = "4.5.20"
